style.css
body {
    background-color:black;
    padding-top: 1px;
    margin-left: 0;
}

#everything {
    margin-top: 2%;
    text-align: center;
}

h1 {
    display: inline-block;
    color:lawngreen;
    font-family: 'Tahoma', sans-serif;
    font-size: 20px;
    margin-bottom: 22px;
}

h1 span {
    padding: 5px;
    border-radius: 5px;
    background-color: black;
    border-color: lawngreen;
    border-style: solid;
}

input {
    border-radius: 10px;
    margin-top: 15px;
    padding-top: 10px;
    padding-bottom: 10px;
    max-width: 80%;
    width: 500px;
    font-family: 'Tahoma', sans-serif;
    font-size: 20px;
    text-indent: 15px;
}

select {
    appearance: none;
}

h2 {
    color: white;
    font-family: 'Tahoma', sans-serif;
    font-size: 15px;
}

p {
    color: white;
    font-family: 'Tahoma', sans-serif;
    line-height: 20%;
}

.arrow {
    height: 18px;
    padding-left: 10px;
    padding-right: 10px;
    cursor: pointer;
}

#rightarrow {
    opacity: 0.3;
}

#display {
    max-width: 80%;
    width: 500px;
    border-style: solid;
    border-color: white;
    border-radius: 10px;
}

.number {
    margin-top: 10px;
    margin-left: 4px;
    margin-right: 4px;
    border-style: solid;
    border-color:dimgray;
    border-radius: 10px;
    padding-left: 10px;
    padding-right: 10px;
    background-color:dimgray;
    width: 10px;
    display: inline-block;
    cursor: pointer;
}

.number p {
    font-family: Arial, Helvetica, sans-serif;
}

.guess {
    margin-top: 10px;
    display: inline-block;
    max-width: 80%;
    width: 500px;
    border-style: solid;
    border-color: white;
    border-radius: 10px;
}

.guess p {
    text-align: left;
    padding-left: 12px;
}

#bottom {
    background-color: #212121;
    width: 100%;
    padding-top: 20px;
    padding-bottom: 20px;
    bottom: 0;
    position: fixed;
}

#bottom a {
    text-decoration: none;
}

#bottom p {
    color: lightgray;
}

.half-block {
    display: inline-block;
    width: 50%;
    text-align: center;
    font-size: 15px;
}

